# observablity-from-zero-to-opentelemetry

./: .gitignore  .gitmodules  .tool-versions  LICENSE  README.md  docker-compose.yaml
config/cortex/: single-process-config-blocks.yaml
config/grafana/: grafana-dashboards.yaml  grafana-datasources.yaml
config/grafana/dashboards/: node_exporter.json  petclinic.json
config/otelcol/: otelcol-builder.yaml  otelcol.yaml
config/tempo/: tempo-local.yaml
drf-petclinic-microservices/: README.md  pyproject.toml
drf-petclinic-microservices/drf_petclinic_microservices/: db.sqlite3  manage.py
drf-petclinic-microservices/drf_petclinic_microservices/drf_petclinic_microservices/: asgi.py  settings.py  urls.py  wsgi.py
drf-petclinic-microservices/drf_petclinic_microservices/vets/: __init__.py  models.py  views.py
drf-petclinic-microservices/drf_petclinic_microservices/vets/fixtures/: specialties.yaml  vets.yaml
drf-petclinic-microservices/drf_petclinic_microservices/vets/migrations/: 0001_initial.py  0002_rename_speciality_specialty_remove_vet_specialities_and_more.py
instrumentation-demo/metrics/java/basket-service/: README.md  pom.xml  start.sh
instrumentation-demo/traces/java/basket-service/: README.md  pom.xml  start.sh
scripts/: build_collector.sh  run_all.sh  run_api_gateway.sh  run_collector.sh  run_customer_service.sh  run_services.sh  stop_all.sh  stop_api_gateway.sh  stop_customer_service.sh  stop_services.sh
spring-petclinic-microservices-config/: application.yml
spring-petclinic-microservices/spring-petclinic-api-gateway/: pom.xml
(+15 files in other folders)
